--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,10 +43,7 @@ import Layout from "../layouts/Layout.astro";
       playsinline
       class="absolute top-0 left-0 w-full h-full object-cover z-0"
     >
-      <source
-        src="https://dcpastel.es/wp-content/uploads/2024/04/video-dc-pastel.webm"
-        type="video/mp4"
-      />
+      <source src="video-dc-pastel.webm" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
 
