--- a/src/icons/Whatsapp.astro
+++ b/src/icons/Whatsapp.astro
@@ -1,8 +1,12 @@
+---
+const { size } = Astro.props;
+---
+
 <svg
   xmlns="http://www.w3.org/2000/svg"
   class="icon icon-tabler icon-tabler-brand-whatsapp"
-  width="44"
-  height="44"
+  width={size}
+  height={size}
   viewBox="0 0 24 24"
   stroke-width="2"
   stroke="green"
