--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,45 +1,55 @@
 ---
-import NavBar from '../components/NavBar.astro';
-import { ViewTransitions } from 'astro:transitions';
+import Footer from "../components/Footer.astro";
+import NavBar from "../components/NavBar.astro";
+import { ViewTransitions } from "astro:transitions";
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="La mejor tienda de tartas de Madrid y todas españa ven y compra el mejores tartes del mundo"
+    />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
     <ViewTransitions />
-	</head>
-	<body>
+  </head>
+  <body>
     <NavBar />
-    
-		<slot />
-	</body>
+    <slot />
+    <Footer />
+  </body>
 </html>
 <style is:global>
+  html {
+    font-family: system-ui, sans-serif;
+  }
+  code {
+    font-family:
+      Menlo,
+      Monaco,
+      Lucida Console,
+      Liberation Mono,
+      DejaVu Sans Mono,
+      Bitstream Vera Sans Mono,
+      Courier New,
+      monospace;
+  }
 
-	html {
-		font-family: system-ui, sans-serif;
+  .text-shadow {
+    text-shadow: 2px 2px 3px black;
+  }
 
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
+  .text-shadow-pink {
+    text-shadow: 1px 1px 2px rgb(0, 0, 0);
+  }
 </style>
