--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,6 +28,7 @@ import Layout from "../layouts/Layout.astro";
             <div class="mx-auto text-center">
               <h1
                 class="text-pink-600 font-bold text-4xl md:text-6xl mb-6 animate-fade-in text-shadow-pink"
+                transition:name="title-principal"
               >
                 Bienvenidos a DC Pastel
               </h1>
