--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -66,6 +66,12 @@ const { title } = Astro.props;
   }
 
   body {
+    background: url("/video-dc-pastel.webp");
+    background-size: cover;
+    background-position: center;
+  }
+
+  body {
     background: rgb(255, 56, 229);
     background: radial-gradient(
       circle,
