--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,4 +1,6 @@
 ---
+import Whatsapp from "../icons/Whatsapp.astro";
+
 const { url, title, description, class: cardClass } = Astro.props;
 ---
 
@@ -10,16 +12,27 @@ const { url, title, description, class: cardClass } = Astro.props;
     alt={title}
     class="w-[50%] mx-auto rounded-lg shadow-md transition-transform duration-300 ease-in-out transform hover:rotate-2 hover:scale-105 hover:shadow-lg"
   />
-  <section class="flex flex-col w-[50%] gap-2 justify-center">
-    <h2
-      class="text-pink-600 font-bold text-lg text-pretty transition duration-300 ease-in-out hover:text-pink-400"
-    >
-      {title}
-    </h2>
-    <p
-      class="text-gray-600 text-sm text-pretty transition duration-300 ease-in-out hover:text-gray-800"
-    >
-      {description}
-    </p>
+  <section class="flex flex-col w-[50%] gap-2 justify-between">
+    <header>
+      <h2
+        class="text-pink-600 font-bold text-lg text-pretty transition duration-300 ease-in-out hover:text-pink-400"
+      >
+        {title}
+      </h2>
+    </header>
+    <section>
+      <p
+        class="text-gray-600 text-sm text-pretty transition duration-300 ease-in-out hover:text-gray-800"
+      >
+        {description}
+      </p>
+    </section>
+
+    <footer class="w-full">
+      <a
+        class="flex items-center gap-2 bg-green-200 border border-green-500 text-white font-semibold text-sm px-4 py-2 rounded-full shadow-lg cursor-pointer hover:bg-green-400 hover:shadow-xl transition duration-300 ease-in-out transform hover:-translate-y-1"
+        ><Whatsapp size="22" /> <span class="text-shadow">Whatsapp</span></a
+      >
+    </footer>
   </section>
 </div>
